# media-rpc

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  tests.yml
src/media_rpc/: cli.py  config.toml
src/media_rpc/core/events/: media.py  playback.py
src/media_rpc/core/models/: media.py  playback.py
src/media_rpc/infra/: http_client.py
src/media_rpc/infra/adapters/: __init__.py  anilist.py  imdb.py  mal.py  models.py  tmdb.py
src/media_rpc/infra/uploaders/: imgbb.py  imgur.py  litterbox.py  onlyimage.py
src/media_rpc/services/: __init__.py  media.py  rpc.py
src/media_rpc/services/players/: __init__.py  jellyfin.py  mpc.py  plex.py  vlc.py
src/media_rpc/utils/: __init__.py  image.py  mediafile.py  parser.py
src/mpcrpc/: cli.py
src/mpcrpc/core/events/: __init__.py  media.py  mpc.py  playback.py
src/mpcrpc/core/models/: __init__.py  media.py  mpc.py  playback.py
src/mpcrpc/core/services/: media.py  mpc.py
src/mpcrpc/infra/: __init__.py  config.py  event_bus.py  http_client.py  parser.py
src/mpcrpc/infra/adapters/: __init__.py  imdb.py  mal.py  models.py  tmdb.py
src/mpcrpc/infra/uploaders/: __init__.py  imgbb.py  imgur.py  litterbox.py  onlyimage.py
src/mpcrpc/services/: __init__.py  media.py  mpc.py  rpc.py
src/mpcrpc/services/players/: mpc.py
src/mpcrpc/utils/: __init__.py  cache.py  config.py  filename.py  image.py  parser.py
tests/infra/: test_infra_event_bus.py
tests/services/: test_services_mpc.py
tests/utils/: test_utils_parser.py
