[project]
name = "mpcrpc"
version = "0.1.0"
description = ""
authors = [
    {name = "heatoz",email = "kinonatsu27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mpcrpc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
