[project]
name = "mpcrpc"
version = "0.1.0"
description = "MPC-HC event-based Discord rich presence integration"
authors = [
    {name = "chronod",email = "klhwjm@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "guessit (>=3.8.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mpcrpc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
