[project]
name = "mpcrpc"
version = "0.4.0"
description = "MPC-HC event-based Discord rich presence integration"
authors = [
    {name = "chronod",email = "klhwjm@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "guessit (>=3.8.0,<4.0.0)",
    "pypresence (>=4.6.1,<5.0.0)",
    "pillow (>=12.2.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "mpcrpc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
mpc-rpc = "mpcrpc.cli:main"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
lint = [
    "ruff (>=0.15.4,<0.16.0)"
]
build = [
    "pyinstaller (>=6.19.0,<7.0.0) ; python_version < '3.15'",
    "argparse (>=1.4.0,<2.0.0)"
]